third_party/rust/rayon/tests/compile-fail/rc_par_iter.rs
extern
crate
rayon
;
use
rayon
:
:
iter
:
:
IntoParallelIterator
;
use
std
:
:
rc
:
:
Rc
;
fn
main
(
)
{
let
x
=
vec
!
[
Rc
:
:
new
(
22
)
Rc
:
:
new
(
23
)
]
;
let
mut
y
=
vec
!
[
]
;
x
.
into_par_iter
(
)
.
map
(
|
rc
|
*
rc
)
.
collect_into_vec
(
&
mut
y
)
;
}
